plsight-allen/DotnetCoreFundamentals: add restaurant data to template

--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/DotnetCoreFundamentals.csproj
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/DotnetCoreFundamentals.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetCoreFundamentals.Data\DotnetCoreFundamentals.Data.csproj" />
+  </ItemGroup>
+
 </Project>
