plsight-allen/DotnetCoreFundamentals: add local mssql db w/ migration

--- a/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/appsettings.json
+++ b/plsight-allen/DotnetCoreFundamentals/DotnetCoreFundamentals/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message":  "Hello from app settings"
+  "Message":  "Hello from app settings",
+  "ConnectionStrings": {
+    "DotnetCoreFundamentalsDb":  "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DotnetCoreFundamentals;Integrated Security=True"
+  }
 }
