--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
@@ -128,6 +128,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>4.6.0.1141</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
