--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="4.6.0.1141" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
