--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.Android/Properties/AndroidManifest.xml
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.klcantrell.travelrecord">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="TravelRecord.Android" android:theme="@style/MainTheme"></application>
+	<application android:label="TravelRecord.Android" android:theme="@style/MainTheme">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="REDACTED" />
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest>
