--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
@@ -131,6 +131,9 @@
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>4.6.0.1141</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
