rosas/travel: send get request to foursquare for venues

--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
@@ -16,9 +16,11 @@
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="4.6.0.1141" />
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Logic\" />
   </ItemGroup>
 </Project>
