--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
@@ -22,5 +22,13 @@
     <Folder Include="Model\" />
     <Folder Include="Helpers\" />
     <Folder Include="Logic\" />
+    <Folder Include="Assets\" />
+    <Folder Include="Assets\Images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Assets\Images\plane.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Images\plane.png" />
   </ItemGroup>
 </Project>
