--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.Android/TravelRecord.Android.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.Android/TravelRecord.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="Xam.Plugin.Geolocator">
       <Version>4.5.0.6</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client">
+      <Version>4.1.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
