--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
@@ -134,6 +134,9 @@
     <PackageReference Include="Xam.Plugin.Geolocator">
       <Version>4.5.0.6</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client">
+      <Version>4.1.2</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
