--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Xamarin.Forms.Maps" Version="4.6.0.1141" />
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
