--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.Android/TravelRecord.Android.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.Android/TravelRecord.Android.csproj
@@ -67,6 +67,9 @@
     <PackageReference Include="Microsoft.Azure.Mobile.Client">
       <Version>4.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore">
+      <Version>4.1.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
