--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord.iOS/TravelRecord.iOS.csproj
@@ -137,6 +137,9 @@
     <PackageReference Include="Microsoft.Azure.Mobile.Client">
       <Version>4.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore">
+      <Version>4.1.2</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
