--- a/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
+++ b/rosas-xamarin/TravelRecord/TravelRecord/TravelRecord/TravelRecord.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.1.2" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore" Version="4.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
