--- a/rosas-xamarin/ImageUploader/ImageUploader.Android/ImageUploader.Android.csproj
+++ b/rosas-xamarin/ImageUploader/ImageUploader.Android/ImageUploader.Android.csproj
@@ -58,6 +58,9 @@
     <PackageReference Include="Xam.Plugin.Media">
       <Version>5.0.1</Version>
     </PackageReference>
+    <PackageReference Include="WindowsAzure.Storage">
+      <Version>9.3.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
