--- a/rosas-xamarin/ImageUploader/ImageUploader.iOS/ImageUploader.iOS.csproj
+++ b/rosas-xamarin/ImageUploader/ImageUploader.iOS/ImageUploader.iOS.csproj
@@ -128,6 +128,9 @@
     <PackageReference Include="Xam.Plugin.Media">
       <Version>5.0.1</Version>
     </PackageReference>
+    <PackageReference Include="WindowsAzure.Storage">
+      <Version>9.3.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
