--- a/rosas-xamarin/ImageUploader/ImageUploader/ImageUploader.csproj
+++ b/rosas-xamarin/ImageUploader/ImageUploader/ImageUploader.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 </Project>
