--- a/PlayWithCSharpAOT/PlayWithCSharpAOT.csproj
+++ b/PlayWithCSharpAOT/PlayWithCSharpAOT.csproj
@@ -23,8 +23,10 @@
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-*" Condition="'$(UseCoreRT)' == 'true'" />
+  <ItemGroup Condition="'$(UseCoreRT)' == 'true'">
+    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-*" />
+    <AppContextSwitchOverrides Include="Switch.System.Reflection.Disabled.DoNotThrowForAssembly" />
+    <AppContextSwitchOverrides Include="Switch.System.Reflection.Disabled.DoNotThrowForAttributes" />
   </ItemGroup>
 
 </Project>
