--- a/TestDisableReflection/TestDisableReflection.csproj
+++ b/TestDisableReflection/TestDisableReflection.csproj
@@ -1,13 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+  <PropertyGroup Condition="'$(UseCoreRT)' == 'true'">
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <InvariantGlobalization>true</InvariantGlobalization>
+    <RootAllApplicationAssemblies>false</RootAllApplicationAssemblies>
+    <IlcOptimizationPreference>Size</IlcOptimizationPreference>
     <IlcDisableReflection>true</IlcDisableReflection>
+    <IlcGenerateCompleteTypeMetadata>false</IlcGenerateCompleteTypeMetadata>
+    <IlcGenerateStackTraceData>false</IlcGenerateStackTraceData>
+    <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
   </PropertyGroup>
 
-  <ItemGroup>
+  <PropertyGroup Condition="'$(UseCoreRT)' != 'true'">
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
+    <DebugType>none</DebugType>
+    <SelfContained>true</SelfContained>
+    <PublishTrimmed>true</PublishTrimmed>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(UseCoreRT)' == 'true'">
     <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-*" />
+    <AppContextSwitchOverrides Include="Switch.System.Reflection.Disabled.DoNotThrowForAssembly" />
+    <AppContextSwitchOverrides Include="Switch.System.Reflection.Disabled.DoNotThrowForAttributes" />
   </ItemGroup>
 
 </Project>
