--- a/cummings-net-angular/DatingApp/API/appsettings.Development.json
+++ b/cummings-net-angular/DatingApp/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "Dev key - this should be super secret for production"
 }
