[Montemagno/BrushUpXamarin]: Use recommended release build settings

--- a/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin.Android/BrushUpXamarin.Android.csproj
+++ b/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin.Android/BrushUpXamarin.Android.csproj
@@ -42,6 +42,9 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <AndroidEnableProfiledAot>true</AndroidEnableProfiledAot>
+    <AndroidLinkTool>r8</AndroidLinkTool>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
