--- a/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin.csproj
+++ b/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin/BrushUpXamarin.csproj
@@ -9,4 +9,16 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2545" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="ViewModels\" />
+    <None Remove="Models\" />
+    <None Remove="Services\" />
+    <None Remove="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
 </Project>
